--- a/packages/trace-viewer/src/ui/timeline.css
+++ b/packages/trace-viewer/src/ui/timeline.css
@@ -108,7 +108,7 @@
   --action-background-color: #1a85ff66;
 }
 
-:root:dark-mode .timeline-bar.action.error {
+:root.dark-mode .timeline-bar.action.error {
   --action-color: var(--vscode-errorForeground);
   --action-background-color: #f4877166;
 }
@@ -162,7 +162,7 @@
   background-color: #3879d91a;
 }
 
-:root:dark-mode .timeline-window-curtain {
+:root.dark-mode .timeline-window-curtain {
   background-color: #161718bf;
 }
 
